# attack-target-network

./: .gitignore  README.md  pyproject.toml
apps/: week3_attack_target_graph_dash.py  week3_runtime_paths.py
data/docs/: ATTACK_TARGET_CLASSIFICATION_EXPLAINER.md  ATTACK_TARGET_NETWORK_PROJECT_PROPOSAL.md  CSV_CATALOG.md  DATA_SUMMARY.md  DOCS_INDEX.md  NLP_PROJECT_IDEAS.md  PROGRESS.md  PROJECT_IDEAS.md  WEEK2_GRAPH_PLAIN_LANGUAGE_SUMMARY.md  WEEK3_DASH_APP_GUIDE.md  WEEK3_DATA_CLEANING_PLAN.md  WEEK3_GRAPH_INTERACTIVITY_SPEC.md  WEEK3_TARGET_CLASSIFICATION_EXPLAINER.md
data/reference/codebooks/adimpact/: AdImpact+Data+Dictionary,+Advanced+TV+Data+Suite,+August+2024 (1).docx
notebooks/: exploration.ipynb  sta_expl.ipynb  test_pred.ipynb  week1_attack_target_prototype.ipynb  week2_attack_target_graph_interactive.ipynb  week2_attack_target_pipeline_scaffold.ipynb
scripts/: week2_build_attack_target_v1.py  week3_build_attack_target_graph_interactive_v1_1.py  week3_clean_attack_target_v1_1.py
