[project]
name = "data"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerenemy",email = "jzay@wesleyan.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14.1"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "parquet (>=1.3.1,<2.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "nbformat (>=4.2.0)",
    "dash (>=2.18.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
